--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d ."
+    "deploy": "gh-pages -d build"
   }
 }
